<resources>
    <string name="app_name">MagiConf</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">Sobre</string>
    <string name="action_exit">Sair</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="test">Test Dummy</string>
    <string name="agendaButtonText">Agenda</string>
    <string name="app_version">MagiConf v1.0</string>
    <string name="app_just_version">v1.0</string>
    <string name="checkInButtonText">Check-in</string>
    <string name="contactsButtonText">Contactos</string>
    <string name="pubsOfInterestButtonText">Publicações\nde\nInteresse</string>
    <string name="AuthorsAndKeynotesButtonText">Autores\ne\nOradores\nKeynote</string>
    <string name="informationsButtonText">Informações</string>
    <string name="addFavPublication">Adicionar a publicações de interesse</string>
    <string name="conferenceButtonText">Conferência</string>
    <string name="organizationButtonText">Organização</string>
    <string name="sponsorsButtonText">Patrocinadores</string>
    <string name="sightsButtonText">Pontos de\nInteresse</string>
    <string name="aboutButtonText">Sobre</string>
    <string name="thanksButtonText">Agradecimentos</string>
    <string name="agendaButtonDescription">Agenda</string>
    <string name="checkInButtonDescription">Check-in</string>
    <string name="contactsButtonDescription">Contactos</string>
    <string name="pubsOfInterestButtonDescription">Publicações de Interesse</string>
    <string name="AuthorsAndKeynotesButtonDescription">Autores e Oradores Keynote</string>
    <string name="informationsButtonDescription">Informações</string>
    <string name="conferenceButtonDescription">Conferência</string>
    <string name="organizationButtonDescription">Organização</string>
    <string name="sponsorsButtonDescription">Patrocinadores</string>
    <string name="sightsButtonDescription">Pontos de\nInteresse</string>
    <string name="aboutButtonDescription">Sobre</string>
    <string name="thanksButtonDescription">Agradecimentos</string>
    <string name="city_description_expandable_list">Descrição da Cidade</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="time"></string>
    <string name="place"></string>
    <string name="photo"></string>
    <string name="title_activity_social_event">Evento Social</string>
    <string name="in_agenda">Na minha agenda</string>
    <string name="time_label">Hora:</string>
    <string name="place_label">Local:</string>
    <string name="title_activity_poster_session">Sessão de Posters</string>
    <string name="posterSessionDescription">Descrição:</string>
    <string name="timeps">Horário</string>
    <string name="placeps">Lugar:</string>
    <string name="button_show_event1">Event 1</string>
    <string name="button_show_author1">Author 1</string>
    <string name="button_show_article1">Article 1</string>
    <string name="buttonshowpostersession">Poster Session 1</string>
    <string name="button_show_keynote_session">Keynote Session 1</string>
    <string name="button_show_talk">Talk 1</string>
    <string name="event_name"></string>
    <string name="talk_title"></string>
    <string name="psession_title"></string>
    <string name="conference_title"></string>
    <string name="title_activity_talk_session">Sessão Talk</string>
    <string name="articles_label">Artigos:</string>
    <string name="posterSession_title"></string>
    <string name="title_activity_keynote_session">Sessão Keynote</string>
    <string name="keynote_speaker_photo_description">Keynote Speaker Photo</string>
    <string name="kenote_speaker_name">Keynote 1</string>
    <string name="keynote_title"></string>
    <string name="keynote_session_description_label">Descrição:</string>
    <string name="title_activity_keynote_speaker"></string>
    <string name="keynote_country">País:</string>
    <string name="keynote_photo_description"></string>
    <string name="keynote_organization">Organização:</string>
    <string name="keynote_email">E-mail:</string>
    <string name="keynote_photo"></string>
    <string name="author_name">Author 1</string>
    <string name="author_title"></string>
    <string name="author_photo_description">Author Photo</string>
    <string name="contact_name"></string>
    <string name="contact_title"></string>
    <string name="contact_phone"></string>
    <string name="contact_country"></string>
    <string name="contact_email"></string>
    <string name="contact_workplace"></string>
    <string name="contact_email_label">Email:</string>
    <string name="member_name"></string>
    <string name="title_members_activity">Organização</string>
    <string name="phonek"></string>
    <string name="rolek"></string>
    <string name="role_label">Role:</string>
    <string name="role_labelk">Role:</string>
    <string name="role_labelp">Role:</string>
    <string name="phone_label">Telefone:</string>
    <string name="keynote_phone_label"></string>
    <string name="contact_photo_description">Contact Photo</string>
    <string name="title_activity_article">Artigo</string>
    <string name="title_activity_author">Author</string>
    <string name="author_country">País:</string>
    <string name="author_organization">Organização:</string>
    <string name="author_email">E-mail:</string>
    <string name="authors_label">Autores:</string>
    <string name="abstract_label">Resumo:</string>
    <string name="poster_label">Posters:</string>
    <string name="title_activity_poster"></string>
    <string name="title_activity_publication_details">Detalhes de publicação</string>
    <string name="publication_authors">Autores:</string>
    <string name="publication_abstract">Resumo:</string>
    <string name="show_abstract">Mostrar resumo</string>
    <string name="title_activity_favorite_publications">Publicações de Interesse</string>
    <string name="remove_from_favorites">Remover</string>
    <string name="remove_author">Remover</string>
    <string name="remove_keynote">Remover</string>
    <string name="remove_participant">Remover</string>
    <string name="search">Pesquisar</string>
    <string name="participants">Participants</string>
    <string name="participant_phone_label">Phone Number:</string>
    <string name="participant_country_label">Country:</string>
    <string name="participant_country"></string>
    <string name="participant_name"></string>
    <string name="keynote_name"></string>
    <string name="content_world_description"></string>
    <string name="content_world_description2"></string>
    <string name="content_world_description3"></string>
    <string name="conference_photo_description">Conference Photo</string>
    <string name="conference_description_label">Descrição:</string>
    <string name="conference_description"></string>
    <string name="conference_gps"></string>
    <string name="conference_gps_label">Coordenadas GPS:</string>
    <string name="conference_localization_label">Localização:</string>
    <string name="conference_edition"></string>
    <string name="conference_beginning"></string>
    <string name="conference_ending"></string>
    <string name="conference_beginning_label">Início:</string>
    <string name="conference_ending_label">Fim:</string>
    <string name="conference_place"></string>
    <string name="conference_website_label">Website:</string>
    <string name="conference_website"></string>
    <string name="title_informations_menu">Informações</string>
    <string name="title_activity_authors_keynotes">Autores e Oradores Keynote</string>
    <string name="title_conference_menu">Conferência</string>
    <string name="title_OneSight_menu"></string>
    <string name="authors_tab">Autores</string>
    <string name="keynote_speaker_tab">Oradores Keynote</string>
    <string name="no_data_to_display_keynotes">Não existem Oradores Keynote na Conferência</string>
    <string name="no_data_to_display_keynotes_contacts">Não existem keynotes adicionados</string>
    <string name="no_data_to_display_authors">Não existem Autores na Conferência</string>
    <string name="no_data_to_display_authors_contacts">Não existem autores adicionados</string>
    <string name="no_data_to_display_participants">Não existem participantes adicionados</string>
    <string name="keynote_speaker_add_contact_icon">Orador Keynote Add Contact Icon</string>
    <string name="author_add_contact_icon">Author Add Contact Icon</string>
    <string name="title_activity_contacts">Contactos</string>
    <string name="authors_contact_tab">Autores</string>
    <string name="keynote_speaker_contact_tab">Oradores Keynote</string>
    <string name="author_pub_add_fav_icon">Author Publication Add Icon</string>
    <string name="title_activity_workshop">Workshop</string>
    <string name="workshop_description_label">Descrição:</string>
    <string name="title_activity_main_agenda">MainAgendaActivity</string>
    <string name="time_8h">08h</string>
    <string name="time_9h">09h</string>
    <string name="time_10h">10h</string>
    <string name="time_11h">11h</string>
    <string name="time_12h">12h</string>
    <string name="time_13h">13h</string>
    <string name="time_14h">14h</string>
    <string name="time_15h">15h</string>
    <string name="time_16h">16h</string>
    <string name="time_17h">17h</string>
    <string name="time_18h">18h</string>
    <string name="time_19h">19h</string>
    <string name="time_20h">20h</string>
    <string name="time_21h">21h</string>
    <string name="time_22h">22h</string>
    <string name="time_23h">23h</string>
    <string name="time_24h">24h</string>
    <string name="title_sights_menu">Pontos de Interesse</string>
    <string name="description_label">Descrição:</string>
    <string name="description"></string>
    <string name="gps"></string>
    <string name="gps_label">Coordenadas GPS:</string>
    <string name="local_label">Local:</string>
    <string name="local"></string>
    <string name="contact_label">Contacto:</string>
    <string name="contact"></string>
    <string name="contact_country_label">País:</string>
    <string name="contact_facebook"></string>
    <string name="linkedin"></string>
    <string name="contact_li_label">País:</string>
    <string name="developers_name"></string>
    <string name="developers_number"></string>
    <string name="developers_photo"></string>
    <string name="city_photo_description">City Photo</string>
    <string name="sponsor_photo_description">Sponsor Photo</string>
    <string name="sponsor_name"></string>
    <string name="sponsor_photo"></string>
    <string name="thanks"></string>
    <string name="check_in_participant_photo_description">Participant Photo</string>
    <string name="check_in_participant_name">Nome do Participante</string>
    <string name="check_in_participant_organization">Organização do Participante</string>
    <string name="check_in_instructions">Apresente o seguinte código no leitor de QRCodes para efectuar o check-in:</string>
    <string name="check_in_qrcode">Participant QRcode</string>
    <string name="check_in_action_bar_title">Check-In</string>
    <string name="check_in_participant_tag">Nome:</string>
    <string name="check_in_participant_organization_tag">Organização:</string>
    <string name="conference_agenda_tab">Programa</string>
    <string name="participant_agenda_tab">Minha Agenda</string>
    <string name="loading">A carregar</string>
    <string name="workplace_label">Organização:</string>
    <string name="workplace"></string>
    <string name="persons"></string>
    <string name="person_photo"></string>
    <string name="introd">Queremos expressar os nossos agradecimentos a:</string>
    <string name="p1">João Moura Pires</string>
    <string name="p2">Ana Moreira</string>
    <string name="worldcist">WorldCIST13</string>
</resources>