<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CheckInActivity" >

    <ImageView
        android:id="@+id/check_in_participant_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/check_in_participant_photo_description" />

    <RelativeLayout
        android:id="@+id/check_in_participant_name_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_in_participant_photo"
        android:layout_centerHorizontal="true"
        android:paddingTop="22dp" >

        <TextView
            android:id="@+id/check_in_participant_name_tag"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/check_in_participant_tag"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/check_in_participant_name"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/check_in_participant_name_tag"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="@string/check_in_participant_name"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/check_in_participant_organization_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_in_participant_name_wrapper"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/check_in_participant_organization_tag"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/check_in_participant_organization_tag"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/check_in_participant_organization"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/check_in_participant_organization_tag"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="@string/check_in_participant_name"
            android:textStyle="bold" />
    </RelativeLayout>


    <TextView
        android:id="@+id/check_in_instructions"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_in_participant_organization_wrapper"
        android:layout_centerHorizontal="true"
        android:paddingTop="13.2dp"
        android:text="@string/check_in_instructions"
        />

    <ImageView
        android:id="@+id/check_in_qrcode"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@id/check_in_instructions"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/check_in_qrcode"
        android:paddingTop="10dp" />

</RelativeLayout>